# W4DJ-RKB-Legacy

./: .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: build-artifacts.yml  release.yml
app/: index.html  package-lock.json  package.json
app/src/: app.test.ts  app.ts  main.ts  styles.css
docs/superpowers/plans/: 2026-07-09-w4dj-tauri-gui.md  2026-07-10-dual-sync-slots.md
docs/superpowers/specs/: 2026-07-09-w4dj-tauri-gui-design.md  2026-07-10-dual-sync-slots-design.md  2026-07-11-w4dj-workbench-b-design.md
src/: config.rs  desktop.rs  gui.rs  lib.rs  main.rs  metadata.rs  preferences.rs  sync.rs  task.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: desktop_controller.rs  desktop_flow.rs  gui_launch.rs  preferences_roundtrip.rs  sync_policy.rs  task_state.rs
